Made expander factory configurable